# SARS

./: .gitignore  .gitignore-e  Cargo.lock-e  Cargo.toml  README.md  flamegraph.svg-e  transfer.txt  world.bc
src/: main.rs  main.rs-e  position.rs  position.rs-e  taxonomy.rs
src/genome/: mod.rs  mod.rs-e
src/genome/chromosome/: \  base_pair.rs  base_pair.rs-e  base_pair_group.rs  gene.rs  gene.rs-e  mod.rs  nucleobase.rs  nucleobase.rs-e
src/microbe/: mod.rs  mod.rs-e
src/microbe/grouping/: class.rs  family.rs  genus.rs  mod.rs  order.rs  phylum.rs  species.rs  strain.rs
src/neural/: edge.rs  mod.rs  node.rs
src/quadtree/: mod.rs
src/world/: mod.rs  mod.rs-e
tools/: requirements.txt  taxonomy_gen.py
