[package]
name = "sars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["serde1"] }
fastrand = "1.5.0" # Slowly replacing rand
indicatif = "0.16.2"
fxhash = "0.2.1"
rayon = "1.5.1"
signal-hook = "0.3.10"
serde = { version = "1.0.130", features = ["derive"] }
serde_with = "1.11.0"
bincode = "1.3.3"
clap = "2.34.0"
bio = "0.39.0"
memchr = "2.4.1"
strsim = "0.10.0"

